<resources>

    <!-- The name of the app that will be showed in the Action Bar of the MainActivity -->
    <string name="app_name">Tiolia Movies</string>
    <!-- Title of the DetailActivity -->
    <string name="title_activity_detail">Details</string>
    <!-- Title of the SettingsActivity -->
    <string name="title_activity_settings">Settings</string>

    <string name="content_authority">com.tioliaapp.android.tioliamovies</string>

    <string name="error_message">An Error occurred.\nPlease try again.</string>

    <!-- Used to open Settings Menu from MainActivity -->
    <string name="action_settings">Settings</string>
    <!-- Used to share the information about the current movie from the DetailActivity -->
    <string name="action_share">Share</string>

    <!-- For Popular Movies app preferences -->

    <!-- Label for the Show Movies preference -->
    <string name="pref_show_movies_label">Show Movies</string>

    <!-- Label for Show Movies popular preference -->
    <string name="pref_show_movies_label_popular">Popular</string>
    <!-- Label for Show Movies top rated preference -->
    <string name="pref_show_movies_label_top_rated">Top Rated</string>
    <!-- Label for Show Movies favorite preference -->
    <string name="pref_show_movies_label_favourite">Favourite</string>

    <!-- Key name for Show Movies preference in SharedPreferences -->
    <string name="pref_show_movies_key" translatable="false">show_movies</string>

    <!-- Value in SharedPreferences for Show Movies popular option -->
    <string name="pref_show_movies_popular_value" translatable="false">popular</string>
    <!-- Value in SharedPreferences for Show Movies top rated option -->
    <string name="pref_show_movies_top_rated_value" translatable="false">top_rated</string>
    <!-- Value in SharedPreferences for Show Movies favourite option -->
    <string name="pref_show_movies_favourite_value" translatable="false">favourite</string>

    <!-- Strings related to Notification Enabled preference -->
    <string name="pref_enable_notifications_key" translatable="false">enable_notifications</string>
    <string name="pref_enable_notifications_label">Notifications</string>

    <string name="pref_enable_notifications_true">Enabled</string>
    <string name="pref_enable_notifications_false">Not Enabled</string>

    <string name="pref_last_notification">last_notification</string>

    <string name="main_notification_channel_name">Primary</string>

</resources>