<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <ListPreference
        android:defaultValue="@string/pref_show_movies_popular_value"
        android:entries="@array/pref_show_movies_option_labels"
        android:entryValues="@array/pref_show_movies_option_values"
        android:key="@string/pref_show_movies_key"
        android:title="@string/pref_show_movies_label" />

    <CheckBoxPreference
        android:defaultValue="@bool/show_notifications_by_default"
        android:key="@string/pref_enable_notifications_key"
        android:summaryOff="@string/pref_enable_notifications_false"
        android:summaryOn="@string/pref_enable_notifications_true"
        android:title="@string/pref_enable_notifications_label" />

</PreferenceScreen>